css/style.css
/* general */

@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');

* {
    margin: 0;
    box-sizing: border-box;
}

body {
    background: #131018;
    font-family: 'DM Sans', sans-serif;
    color: whitesmoke;
    margin: 0;
    font-weight: 300;
    overflow: auto;
}

.wrapper {
    max-width: 1300px;
    padding: 0 30px;
    margin: 0 auto;
}

.wrapper_full-width {
    max-width: none;
}

.wrapper_floating {
    position: fixed;
    z-index: 10;
}

/* header */

.header {
    box-shadow: 0px 4px 4px rgba(0,0,0,.15);
    background: linear-gradient(70deg, color-mix(in srgb, rgb(65,45,100) 60%, rgb(19,16,24) 40%) 0%,
                                       rgba(19,16,24,1) 25%,
                                       color-mix(in srgb, rgb(65,45,100) 15%, rgb(19,16,24) 85%) 47%,
                                       rgba(19,16,24,1) 70%,
                                       color-mix(in srgb, rgb(65,45,100) 60%, rgb(19,16,24) 40%) 100%);
}

.header-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 0;
}

.logo {
    max-width: 100px;
}

.logo__image {
    width: 100%;
    border-radius: 50%;
}

.navigation-menu {
    padding: 10px;
}

.navigation-menu__list{
    display: flex;
    justify-content: space-between;
    padding: 0 20px;
    align-items: center;
    gap: 25px;
    list-style-type: none;
}

.navigation-menu__item {
    padding: 0 7px;
    border-radius: 5px;
    color: whitesmoke;
}

.navigation-menu__link {
    color: inherit;
    font-size: 25px;
    font-weight: 400;
    line-height: 40px;
    text-decoration: none;
}

.navigation-menu__item:hover {
    outline: solid;
    outline-color: #6a29d3;
    color:#6a29d3;
    outline-width: 2px;
    cursor: pointer;
}

.navigation-menu__link:hover {
    text-decoration: none;
}

/* scrollbar */

::-webkit-scrollbar {
    width: 15px;
    height: 15px;
}

::-webkit-scrollbar-track {
    background-color: rgb(19,16,24);
    border-radius: 7px;
    box-shadow: inset 0 0 6px black;
    border: 2px solid black;
}

::-webkit-scrollbar-thumb {
    background-color: color-mix(in srgb, rgb(65,45,100) 60%, rgb(19,16,24) 40%);
    border-radius: 7px;
}

::-webkit-scrollbar-thumb:hover {
    cursor: default;
    background-color: color-mix(in srgb, rgb(65,45,100) 45%, rgb(19,16,24) 55%);;
}

::-webkit-scrollbar-thumb:active {
    cursor: default;
    background-color: color-mix(in srgb, rgb(65,45,100) 30%, rgb(19,16,24) 70%);;
}

/* main content */

.main {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 0;
    gap: 30px;
    position: relative;
    flex-wrap: wrap;
}

.text-wrapper {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 15px 20px;
    justify-content: space-between;
    padding: 0 10px;
    color: whitesmoke;
}

.text-wrapper_wide {
    width: 100%;
    padding: 0;
}

.about {
    padding: 20px 0;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.about__content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    position: relative;
}

.about__heading {
    font-size: 45px;
    font-weight: 500;
    line-height: 30px;
}

.about__text,
.about__timer {
    font-size: 30px;
    font-weight: 400;
    line-height: 30px;
}

.about__image {
    max-width: 250px;
    border-radius: 50%;
}

.content {
    width: 100%;
    display: flex;
    justify-content: center;
}

.cards-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px 60px;
}

.content-card {
    width: 100%;
    padding: 30px 30px;
    background: linear-gradient(70deg, color-mix(in srgb, rgb(65,45,100) 60%, rgb(19,16,24) 40%) 0%,
                                       rgba(19,16,24,1) 35%,
                                       rgba(19,16,24,1) 50%,
                                       color-mix(in srgb, rgb(65,45,100) 60%, rgb(19,16,24) 40%) 100%);
    border-radius: 20px;
    color: whitesmoke;
    display: flex;
    gap: 40px;
    box-shadow: 3px 4px 4px rgba(0,0,0,.15);
    justify-content: space-between;
}

.content-card_centric {
    flex-direction: column;
    align-items: center;
}

.content-card_right {
    text-align: right;
}

.content-card_clickable-title:hover {
    outline: solid;
    outline-width: 3px;
    outline-color: #6a29d3;
    color: #6a29d3;
}

.content-card_clickable-title:hover .content-card__title:hover {
    cursor: pointer;
    color: #6a29d3;
}

.content-card__image {
    max-height: 400px;
    height: fit-content;
    border-radius: 15px;
    margin: 0;
    object-fit: cover;
}

.content-card__image_gallery {
    width: calc((100% - 2 * 30px) / 3);
    height: 350px;
}

.content-card__image:hover {
    cursor: pointer;
    background-color: black;
    opacity: .7;
}

.content-card__title {
    font-size: 40px;
    font-weight: 500;
    line-height: 40px;
    color: whitesmoke;
}

.content-card__text {
    font-size: 22px;
    font-weight: 300;
    line-height: 30px;
    text-align: justify;
    color: whitesmoke;
}

.gallery-view {
    display: inline-flex;
    align-items: center;
    justify-content: space-between;
    padding: 0;
    gap: 30px;
}

.feedback-form {
    font-size: 22px;
    font-weight: 400;
    line-height: 30px;
    text-align: left;
    color: whitesmoke;
    width: 45%;
    max-width: 700px;
    display: flex;
    flex-direction: column;
    align-items: end;
    gap: 25px;
}

.feedback-form__input {
    font-family: inherit;
    font-size: 20px;
    font-weight: 300;
    line-height: 25px;
    text-align: left;
    color: lightgray;
    background-color: #131018;
    border-style: none;
    border-radius: 10px;
    padding: 15px;
    resize: none;
    overflow: auto;
}

.feedback-form__input:focus {
    outline-color: #6a29d3;
    outline-offset: 0;
    outline-width: 2px;
    outline-style: solid;
}

.feedback-form__input::placeholder {
    font-weight: 200;
    color: rgba(245,245,245,.5);
    font-family: inherit;
}

.feedback-form__button {
    background-color: rgb(65,45,100);
    color: whitesmoke;
    border-style: none;
    border-radius: 10px;
    padding: 17px 30px;
    width: fit-content;
    font-size: 27px;
    font-weight: 400;
    line-height: 30px;
    text-align: center;
    font-family: inherit;
}

.feedback-form__button:hover {
    cursor: pointer;
}

/* floating */

.floating-button-wrapper {
    position: fixed;
    /*display: flex;*/
    justify-content: center;
}

.opening-menu {
    display: flex;
    align-items: center;
    height: 80px;
    width: 80px;
    border-radius: 40px;
    background: linear-gradient(70deg, color-mix(in srgb, rgb(65,45,100) 60%, rgb(19,16,24) 40%) 0%,
                                       rgba(19,16,24,1) 35%,
                                       rgba(65,45,100,1) 80%,
                                       rgba(65,45,100,1) 100%);
    box-shadow: 3px 4px 4px rgba(0,0,0,.15);
    overflow: hidden;
    transition: all 1.5s ease-in-out;
    -webkit-transition: all 1.5s ease-in-out;
}

.navigation-menu_hidden {
    width: 0;
    overflow: hidden;
    transition: all 1.5s ease-in-out;
    -webkit-transition: all 1.5s ease-in-out;
}

.button-wrapper {
    width: 80px;
    height: 80px;
    align-items: center;
}

.click-button {
    color: whitesmoke;
    stroke: whitesmoke;
    font-size: 50px;
    width: 80px;
    height: 80px;
    background: none;
    border: none;
    right: 0;
    position: absolute;
    border-radius: 50%;
    background: rgb(65,45,100);
    align-items: center;
    display: flex;
    padding: 15px;
}

.click-button_no-background {
    background: none;
}

.click-button:hover {
    cursor: pointer;
    /*stroke: #6a29d3;*/
}

.click-button_no-background:hover {
    background: rgba(0,0,0,.7);
    stroke: lightgrey;
}

/* modals */

.modal-wrapper {
    background: rgba(0,0,0,.7);
    z-index: 20;
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    display: none; /* changes to flex */
    align-items: center;
    justify-content: center;
}

.modal-content {
    display: none; /*changes to flex */
    align-items: center;
    justify-content: center;
    width: fit-content;
    height: fit-content;
    padding: 20px;
}

.content-card_modal {
    width: 80vw;
    max-width: 1700px;
    margin: 0;
    overflow: auto;
}

.modal-content__image {
    width: 70%;
    max-width: 1700px;
    max-height: 1100px;
    margin: 0;
    object-fit: cover;
}

/* footer */

.footer {
    margin: 0;
    background: rgba(0,0,0,.3);
    background: linear-gradient(70deg, rgba(0,0,0,.5) 0%,
                                       rgba(19,16,24,1) 25%,
                                       rgba(0,0,0,.25) 47%,
                                       rgba(19,16,24,1) 70%,
                                       rgba(0,0,0,.35) 100%);
}

.footer__content {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 40px 0;
    gap: 20px;
}

.footer__heading {
    font-size: 25px;
    font-weight: 400;
    line-height: 40px;
}

.contacts-menu {
    padding: 15px 0;
    width: 100%;
}

.contacts-menu__list {
    display: block;
    list-style-type: none;
    padding: 0;
}

.contacts-menu__item {
    color: whitesmoke;
    font-size: 20px;
    font-weight: 200;
    line-height: 20px;
    padding: 15px 0;
}

.contacts-menu__link {
    color: whitesmoke;
    text-decoration: none;
}

.contacts-menu__link:hover {
    color: lightgrey;
    text-decoration: underline;
    text-decoration-color: grey;
}

/* common modifiers */

.upper {
    top: 50px;
}

.lower {
    bottom: 50px;
}

.right {
    right: 50px;
}

.left {
    left: 120px;
}

.hidden {
    display: none;
}

